--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+		<!-- Swagger 2 -->
+    	<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		 </dependency>
+
     </dependencies>
 
     <build>
