--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     </parent>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>18</java.version>
     </properties>
 
     <dependencies>
@@ -59,6 +59,13 @@
 			<artifactId>springfox-boot-starter</artifactId>
 			<version>3.0.0</version>
 		 </dependency>
+         <!-- JavaMail API -->
+<dependency>
+    <groupId>com.sun.mail</groupId>
+    <artifactId>javax.mail</artifactId>
+    <version>1.6.5</version>
+</dependency>
+
 
     </dependencies>
 
