--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
             <version>3.0.0</version>
         </dependency>
 
+    
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>28.0-jre</version>
+      </dependency>
     </dependencies>
 
     <build>
